# indoor_4wd_robot

./: README.md
src/bot_bringup/: package.xml  setup.cfg  setup.py
src/bot_bringup/bot_bringup/: robot_comms.py  serial_server.py
src/bot_bringup/launch/: bringup.launch.yaml  bringup_comms.launch.yaml
src/bot_description/: CMakeLists.txt  package.xml
src/bot_description/description/: VLP-16.urdf.xacro  material_macros.xacro  robot.urdf.xacro  robot_base.xacro  wheel.xacro
src/bot_description/launch/: elawn_description.launch.py  view_robot.launch.py
src/bot_description/rviz/: view_robot.rviz
src/bot_msgs/: CMakeLists.txt  package.xml
src/bot_msgs/srv/: ArduinoComm.srv
src/bot_navigation/: CMakeLists.txt  package.xml
src/bot_navigation/behavior_trees/: nav2_tree_nodes.xml  navigate_through_poses_w_replanning.xml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
src/bot_navigation/launch/: localization.launch.py  navigation.launch.py
src/bot_navigation/maps/: map.pgm  map.yaml
src/bot_navigation/params/: nav2_params.yaml  waypoints.yaml
src/bot_navigation/scripts/: follow_path.py  navigate_through_poses.py  waypoints_marker.py
